syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "tobeh.Valmar";
package announcements;

enum AnnouncementType {
  Changelog = 0;
  Announcement = 1;
}

// Service definition for announcements
service Announcements {

  // Gets all announcements
  rpc GetAllAnnouncements (GetAnnouncementsMessage) returns (stream AnnouncementMessage);

}

message AnnouncementMessage {
  google.protobuf.Timestamp date = 1;
  string title = 2;
  string content = 3;
  google.protobuf.StringValue affectedTypoVersion = 4;
  AnnouncementType type = 5;
}

message GetAnnouncementsMessage {

}
